# pixelguesser

./: .dockerignore  .env  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  config.toml  docker-compose.yaml  docker-compose.yml  metadata.json  readme.md
api/: Cargo.toml  readme.md
api/src/: auth.rs  code.rs  consts.rs  entities.rs  error.rs  graphql.rs  image.rs  lib.rs  pixauth.rs  pixessions.rs  piximages.rs  queries.rs  quiz.rs  request.rs  response.rs  round.rs  session.rs  unsplash.rs  user.rs
api/src/auth0/: user.rs
api/src/entities/: mod.rs  player.rs  session.rs  stage.rs
api/src/graphql/: creator.rs  fragments.rs  full.rs  mod.rs  queries.rs  quiz.rs  rounds.rs
api/src/hasura/: creator.rs  fragments.rs  mod.rs  queries.rs  quiz.rs  rounds.rs
api/src/imager/: image.rs
api/src/sessions/: codes.rs
backend/: Cargo.toml  images.sh  sqlx-data.json
backend/auth/: Cargo.toml
backend/auth/src/: create.sql  error.rs  jwt.rs  lib.rs  main.rs  routes.rs  test.rs
backend/graphql/: Cargo.toml
backend/graphql/src/: entities.rs  fauna.rs  functions.rs  lib.rs  queries.rs
backend/imager/: Cargo.toml
backend/imager/src/: main.rs
backend/images/: Cargo.toml
backend/images/src/: lib.rs  main.rs
backend/old/: Cargo.toml
backend/old/src/: error.rs  handle.rs  main.rs  session.rs  state.rs
backend/pixauth/: Cargo.toml
backend/pixauth/src/: create.sql  error.rs  lib.rs  main.rs  routes.rs  test.rs
backend/pixessions/: Cargo.toml
backend/pixessions/src/: handle.rs  lib.rs  main.rs  sessions.rs  state.rs
backend/piximages/: Cargo.toml
backend/piximages/src/: create.sql  lib.rs  main.rs
backend/sessions/: Cargo.toml  readme.md
backend/sessions/src/: code.rs  global.rs  handle.rs  internal.rs  lib.rs  local.rs  main.rs  routes.rs  session.rs  sessions.rs  shared.rs  stage.rs  state.rs  structs.rs  util.rs  ws.rs
backend/shared/src/: error.rs  stage.rs  structs.rs  ws.rs
backend/spar/: Cargo.toml
backend/spar/src/: main.rs
backend/src/: db.rs  error.rs  handle.rs  main.rs  session.rs  state.rs
backend/uploader/: Cargo.toml
backend/uploader/src/: main.rs
bulma/cbs/: Cargo.toml
bulma/cbs/src/: icon_button.rs  lib.rs  loading.rs  simple_field.rs  title_hero.rs
bulma/pbs/: Cargo.toml
bulma/pbs/src/: lib.rs
frontend/: Cargo.toml  schema.graphql
frontend/admin/: Cargo.toml
frontend/admin/src/: database.rs  lib.rs  sessions.rs
frontend/agents/: Cargo.toml
frontend/agents/src/: auth.rs  error.rs  lib.rs
frontend/api/: Cargo.toml  schema.gql
frontend/api/src/: consts.rs  error.rs  lib.rs  session.rs
frontend/auth/: Cargo.toml
frontend/auth/src/: lib.rs  login.rs  signup.rs
frontend/components/: Cargo.toml
frontend/components/src/: center.rs  dyn_image.rs  errors.rs  lib.rs  loader.rs  navbar.rs  pixelate.rs  profile.rs  quiz_card.rs  sidebar.rs  tags.rs  toast.rs
frontend/create/: Cargo.toml
frontend/create/src/: center_space.rs  create_quiz.rs  create_rounds.rs  edit.rs  lib.rs  list.rs  picker.rs  preview.rs  quiz.rs  quiz_form.rs  quiz_page.rs  quiz_summary.rs  round.rs  round_edit.rs  round_form.rs  round_list.rs  round_page.rs  round_preview.rs  rounds.rs  state.rs  summary.rs  unsplash.rs
frontend/host/: Cargo.toml
frontend/host/src/: finish.rs  info.rs  lib.rs  lobby.rs  play.rs  ranking.rs  test.rs
frontend/main/: Cargo.toml  Trunk.toml  animations.css  extensions.css  index.html  index.js  loader.css  style.css  tooltip.css
frontend/main/src/: configuration.rs  dialog.rs  dropdown.rs  initializer.rs  lab.rs  lib.rs  library.rs  loader.rs  main.rs  navbar.rs  overview.rs  search.rs  test.rs  too_new.rs
frontend/manage/: Cargo.toml
frontend/manage/src/: edit.rs  info.rs  lib.rs  list.rs  navigate.rs  page.rs  player_form.rs  player_list.rs  rating.rs  round_info.rs
frontend/profile/: Cargo.toml
frontend/profile/src/: additional.rs  authenticate.rs  credentials.rs  dialog.rs  lib.rs  login.rs  menu.rs  popup.rs  profile.rs
frontend/shared/: Cargo.toml
frontend/shared/src/: auth.rs  callback.rs  consts.rs  contexts.rs  error.rs  form.rs  hooks.rs  lib.rs  macros.rs  resize.rs  route.rs  search.rs  toast.rs  traits.rs
frontend/src/: constants.rs  consts.rs  error.rs  globals.rs  lib.rs  notifications.rs  route.rs  shared.rs
frontend/src/agents/: alert.rs  auth.rs  error.rs  mod.rs  notification.rs  user.rs  websocket.rs
frontend/src/components/: alerts.rs  authentication.rs  loader.rs  main_navbar.rs  mod.rs  navbar.rs  pixelate.rs  profile.rs  quiz_card.rs  quiz_loader.rs
frontend/src/create/: center_image.rs  create_quiz.rs  create_rounds.rs  mod.rs  side_images.rs  side_options.rs
frontend/src/graphql/: base.rs  convert.rs  data.rs  entities.rs  functions.rs  image.rs  images.rs  keys.rs  mod.rs  new.rs  quiz.rs  rounds.rs
frontend/src/host/: finish.rs  lobby.rs  mod.rs  pixelate.rs
frontend/src/keys/: graphql-endpoint.in  hasura-secret.in  image-endpoint.in  image-placeholder.in  session-endpoint.in
frontend/src/manager/: initialize.rs  master.rs  mod.rs  navigate.rs  rating.rs  round_info.rs
frontend/src/pages/: code.rs  create.rs  create_quiz.rs  create_rounds.rs  host.rs  manage.rs  mod.rs  overview.rs  preview.rs
frontend/src/structs/: error.rs  image.rs  mod.rs
frontend/src/utils/: cast.rs  mod.rs  pixelate.rs  resize.rs  websocket.rs
frontend/styles/cbs/: Cargo.toml
frontend/styles/pbs/: Cargo.toml
frontend/utils/: Cargo.toml
frontend/utils/src/: cast.rs  lib.rs  pixelate.rs  use_async.rs
frontend/wasm/: Cargo.toml
frontend/wasm/src/: constants.rs  error.rs  lib.rs  route.rs
init/: Cargo.toml  create.json  test.json
init/src/: auth.rs  graphql.rs  hasura.rs  images.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs  stage.rs  structs.rs  ws.rs
temp/: Cargo.toml
temp/src/: lib.rs
temp/src/elements/: box.rs  button.rs  mod.rs
temp/src/form/: upload.rs
tests/: Cargo.toml  index.html
tests/src/: main.rs
tools/fa-scraper/: Cargo.toml  lib.rs
wasm/: Cargo.toml
wasm/src/: globals.rs  lib.rs  notifications.rs  route.rs
(+391 files in other folders)
