[package]
name = "pixelguesser"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"
description = "a warp backend for the pixelguesser game"
repository = "https://github.com/Funkymaniac/pixelguesser"
license = "GNU GPLv3"

[dependencies]
api = { path = "../api" }

warp = "0.3"

sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
tokio = { version = "1.6.1", features = ["macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rand = "0.8"

futures = "0.3"
tokio-stream = "0.1"

log = "0.4"
dotenv = "0.15"
pretty_env_logger = "0.4"