[package]
name = "frontend"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"
description = "a wasm frontend for the pixelguesser game"
repository = "https://github.com/Funkymaniac/pixelguesser"
license = "GNU GPLv3"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[dependencies]
sessions = { path = "../backend/sessions", features = ["api"] }
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["custom"] }

chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.21", features = ["derive"] }
derive_more = "0.99.16"
serde_repr = "0.1"

log = "0.4"
wasm-logger = "0.2"
wee_alloc = "0.4"

thiserror = "1.0"

yew = { git = "https://github.com/yewstack/yew.git", rev = "4e974dad9282eb765738394b8ee6c6a7d9baa2d9" }
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "4e974dad9282eb765738394b8ee6c6a7d9baa2d9" }
yew-agent = { git = "https://github.com/yewstack/yew.git", rev = "4e974dad9282eb765738394b8ee6c6a7d9baa2d9" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

wasm-bindgen = "^0.2"
wasm-bindgen-futures = "0.4"

photon-rs = { git = "https://github.com/silvia-odwyer/photon.git", default-features = false, features = ["console_error_panic_hook"] }
#imageproc = { version = "0.22.0", default-features = false }
#image = { version = "0.23.12", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }

web-sys = { version = "0.3", features = ["HtmlCanvasElement", "HtmlImageElement", "CanvasRenderingContext2d", "HtmlDivElement", "Blob", "Url"] }
js-sys = "0.3"

gloo = { version = "0.3", features = ["futures"] }
base64 = "0.13"

futures = "0.3"
reqwasm = "0.2.1"
