[package]
name = "frontend"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"
description = "a wasm frontend for the pixelguesser game"
repository = "https://github.com/Funkymaniac/pixelguesser"
license = "GNU GPLv3"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[dependencies]
sessions = { path = "../backend/sessions", features = ["api"] }
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["custom", "fa", "forms"] }

chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.21", features = ["derive"] }
derive_more = "0.99.16"
serde_repr = "0.1"

log = "0.4"
wasm-logger = "0.2"
wee_alloc = "0.4"

thiserror = "1.0"

yew = "0.19.3"
yew-router = "0.16"
yew-agent = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

wasm-bindgen = "^0.2"
wasm-bindgen-futures = "0.4"

photon-rs = { git = "https://github.com/silvia-odwyer/photon.git", default-features = false, features = ["console_error_panic_hook"] }

web-sys = { version = "0.3", features = ["HtmlCanvasElement", "HtmlImageElement", "CanvasRenderingContext2d", "HtmlDivElement", "Blob", "Url"] }
js-sys = "0.3"

gloo = { version = "0.3", features = ["futures"] }
base64 = "0.13"
validator = { version = "0.14", features = ["derive"] }

futures = "0.3"
reqwasm = "0.2.1"
