[package]
name = "init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hasura = { git = "https://github.com/tdooms/hasura.git" }
api = { path = "../api", features = ["graphql"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

base64 = "*"
tokio = {version = "1.20", features = ["full"]}

log = "0.4"
pretty_env_logger = "0.4"