[package]
name = "init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hasura = { git = "https://github.com/tdooms/hasura.git" }
api = { path = "../api", features = ["graphql", "images", "auth"] }
reqwest = "0.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

dotenv = "0.15"
base64 = "0.13"
tokio = { version = "1.20", features = ["full"] }
futures = "0.3"
time = "0.3"

tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt", "time", "std", "local-time"]}