[package]
name = "shared"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"
description = "shared structs for both front and backend of pixelguesser"
repository = "https://github.com/Funkymaniac/pixelguesser"
license = "GNU GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"