[package]
name = "wasm"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"
description = "a wasm frontend for the pixelguesser game"
repository = "https://github.com/Funkymaniac/pixelguesser"
license = "GNU GPLv3"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
api = { path = "../api" }

instant = { version = "0.1", features = ["wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
wasm-logger = "0.2"

anyhow = "1.0"
thiserror = "1.0"

yew = { git = "https://github.com/yewstack/yew.git" }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yew-services = { git = "https://github.com/yewstack/yew.git" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

wasm-bindgen = "^0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "HtmlImageElement", "CanvasRenderingContext2d"] }
js-sys = "0.3"