[package]
name = "auth2"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

tokio = { version = "1.20", features = ["full"] }
jsonwebtoken = { version = "8.1", features = ["use_pem"] }
dotenv = "0.15"
clap = { version = "3.2", features = ["derive"] }

sha3 = { version = "0.10" }
base64 = { version = "0.13" }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
