[package]
name = "imager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

tokio = { version = "1.9", features = ["full"] }
rand = "0.8"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
photon-rs = "0.3"