[package]
name = "pixessions"
version = "0.1.0"
edition = "2021"

[features]
server = ["pretty_env_logger", "log", "axum", "tokio", "clap", "rand", "tower-http"]
default = []

[dependencies]
pretty_env_logger = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }

tower-http = { version = "0.3.0", features = ["cors"], optional = true }
axum = { version = "0.5", features = ["ws"], optional = true }

tokio = { version = "1.9", features = ["full"], optional = true }
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.0", features = ["derive"], optional = true }
rand = { version = "0.8", optional = true }
strum = { version = "0.24", features=["derive"] }

thiserror = "1.0.36"