[package]
name = "pixessions"
version = "0.1.0"
edition = "2021"

[features]
server = ["tracing", "tracing-subscriber", "axum", "tokio", "rand", "tower-http", "dotenv"]
default = []

[dependencies]
tracing-subscriber = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }

tower-http = { version = "0.3.0", features = ["cors"], optional = true }
axum = { version = "0.6", features = ["ws"], optional = true }

tokio = { version = "1.20", features = ["full"], optional = true }
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = { version = "0.15", optional = true }
rand = { version = "0.8", optional = true }
strum = { version = "0.24", features=["derive"] }

thiserror = "1.0.36"