[package]
name = "piximages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["rocket", "rocket_cors", "tokio", "sha3", "image", "base64", "thiserror", "sqlx", "pixauth", "blurhash-wasm"]
default = []

[dependencies]
pixauth = { path = "../pixauth", features = ["verify"], optional = true }

rocket = { version = "0.5.0-rc.2", optional = true }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master", optional = true }

tokio = { version = "1.20", features = ["full"], optional = true }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"], optional = true }

blurhash-wasm = { git = "https://github.com/fpapado/blurhash-rust-wasm.git", rev = "a81e33c46a10a63f1f0ed25aa48a6e3066d26804", optional = true }
sha3 = { version = "0.10", optional = true }
image = { version = "0.24", optional = true }
base64 = { version = "0.20", optional = true }
thiserror = { version = "1.0", optional = true }

tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99"
strum = { version = "0.24", features = ["derive"] }
dotenv = "0.15"