[package]
name = "sessions"
version = "0.1.0"
edition = "2018"

[features]
server = ["pretty_env_logger", "log", "warp", "tokio", "serde_json", "futures", "tokio-stream", "clap", "rand"]
api = []
full = ["api", "server"]

[dependencies]
pretty_env_logger = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }

warp = { version = "0.3", optional = true }
tokio = { version = "1.9", features = ["full"], optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

futures = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }

clap = { version = "3.0.0-beta.2", optional = true }
rand = { version = "0.8", optional = true }

thiserror = "1.0"
strum = { version = "0.21", features = ["derive"] }