[package]
name = "pbs"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"
description = "clone from ybc with less code duplciation"
repository = "https://github.com/Funkymaniac/pixelguesser"
license = "GNU GPLv3"

[dependencies]
derive_more = "0.99.16"
yew = { git = "https://github.com/yewstack/yew.git", rev="91ab14bfd3ee0e6cd6e585a6f41f7421076ebbaa" }
yew-router = { git = "https://github.com/yewstack/yew.git", rev="91ab14bfd3ee0e6cd6e585a6f41f7421076ebbaa"}
yewtil = { version = "0.3.2", features = ["neq"] }
gloo-file = "0.1"

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
