[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996", features = ["csr"] }
cobul = { git = "https://github.com/tdooms/cobul.git" }
ywt = { git = "https://github.com/tdooms/ywt.git" }

gloo-file = "0.2"
web-sys = {version = "0.3", features = ["File"]}

serde = {version = "*", features = ["derive"]}
serde_json = "*"