[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-router = "0.17"
yew = { version = "0.20", features = ["csr"] }

shared = { path = "../shared" }
api = { path = "../../api", features = ["sessions"] }
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["simple"] }