[package]
name = "agents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-agent = "0.1"
wasm-bindgen  = "*"
wasm-bindgen-futures  = "*"
js-sys = "0.3"
serde-wasm-bindgen = "*"
derive_more = "*"
futures = "0.3"
keys = { path = "../keys" }
api = { path = "../api" }
wasm-logger = "0.2"