[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sessions = { path = "../../backend/sessions", features = ["api"], default-features = false }
yew = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }

serde_json = "*"
dotenv_codegen = "0.15"
log = "*"
thiserror = "1.0"
chrono = { version = "*", features = ["serde"] }
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "*", features = ["Url"] }
gloo = { version = "0.5", features = ["futures"] }
wasm-bindgen-futures = "*"
futures = "0.3"
reqwasm = "0.4.0"
validator = { version = "0.14", features = ["derive"] }
derive_more = "0.99.16"
strum = { version = "0.24", features = ["derive"] }

hasura = { git = "https://github.com/tdooms/hasura.git" }
