[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
api = { path = "../../api", features = ["sessions"] }
cobul = { git = "https://github.com/tdooms/cobul.git" }

yew-agent = "0.2"
yew-router = "0.17"
yew = "0.20"

derive_more = "0.99"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlDivElement", "HtmlCanvasElement", "HtmlImageElement"] }
tracing = "0.1"
gloo = "0.8"
