[package]
name = "create"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api", features = ["graphql", "unsplash"] }
components = { path = "../components" }
shared = { path = "../shared" }
hasura = { git = "https://github.com/tdooms/hasura.git" }

cropper = { git = "https://github.com/tdooms/cropper.git" }
ywt = { git = "https://github.com/tdooms/ywt.git" }
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["fa", "simple", "extensions"] }

yew-agent = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }

gloo = "0.8"
log = "0.4"
futures = "0.3"
derive_more = "0.99"
strum = { version = "0.24", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
web-sys = { version = "0.3", features = ["File", "DragEvent", "DataTransfer"] }
wasm-bindgen-futures = "0.4"