[package]
name = "create"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api", features = ["graphql", "images"] }
components = { path = "../components" }
shared = { path = "../shared" }
hasura = { git = "https://github.com/tdooms/hasura.git" }

cropper = { git = "https://github.com/tdooms/cropper.git" }
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["fa", "simple", "extensions"] }

yew-agent = "0.2"
yew-router = "0.17"
yew = "0.20"

tracing = "0.1"
derive_more = "0.99"
strum = { version = "0.24", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
web-sys = { version = "0.3", features = ["File", "DragEvent", "DataTransfer"] }
wasm-bindgen-futures = "0.4"