[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api", features=["wasm"] }
shared = { path = "../shared" }
components = { path = "../components" }

cobul = { git = "https://github.com/tdooms/cobul.git", features = ["fa", "forms"] }
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }

log = "0.4"
gloo = "0.5"
web-sys = "0.3"
qrcode = "0.12"
image = "0.23"
photon-rs = "0.3"
