[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api", features = ["session"] }
shared = { path = "../shared" }
components = { path = "../components" }

cobul = { git = "https://github.com/tdooms/cobul.git", features = ["fa"] }
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c" }

log = "0.4"
gloo = "0.8.0"
web-sys = "0.3"
qrcode = "0.12"
image = "0.23"
photon-rs = "0.3"
