[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api", features = ["sessions"] }
shared = { path = "../shared" }
components = { path = "../components" }

cobul = { git = "https://github.com/tdooms/cobul.git", features = ["fa"] }
yew-router = "0.17"
yew = "0.20"

tracing = "0.1"
gloo = "0.8.0"
web-sys = "0.3"
