[package]
name = "main"
version = "0.1.0"
edition = "2021"
authors = ["thomas <thomas@dooms.eu>"]
description = "a wasm frontend for the pixelguesser game"
repository = "https://github.com/Funkymaniac/pixelguesser"
license = "GNU GPLv3"

[dependencies]
admin = { path = "../admin" }
create = { path = "../create" }
host = { path = "../host" }
manage = { path = "../manage" }
profile = { path = "../profile" }
api = { path = "../../api", features = ["auth"] }
shared = { path = "../shared" }
components = { path = "../components" }

cobul = { git = "https://github.com/tdooms/cobul.git" }
yew-agent = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c" }
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c", features = ["csr"] }

web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }

strum = { version = "0.24", features = ["derive"] }
gloo = "0.8"
derive_more = "0.99"
serde_json = "1.0"
futures = "0.3"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

wasm-logger = "0.2"
log = "0.4"

