[package]
name = "main"
version = "0.1.0"
edition = "2021"
authors = ["thomas <thomas@dooms.eu>"]
description = "a wasm frontend for the pixelguesser game"
repository = "https://github.com/Funkymaniac/pixelguesser"
license = "GNU GPLv3"

[dependencies]
admin = { path = "../admin" }
create = { path = "../create" }
host = { path = "../host" }
manage = { path = "../manage" }
profile = { path = "../profile" }
api = { path = "../../api", features = ["auth"] }
shared = { path = "../shared" }
components = { path = "../components" }

cobul = { git = "https://github.com/tdooms/cobul.git" }
yew-agent = "0.2"
yew-router = "0.17"
yew = { version = "0.20", features = ["csr"] }

web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }

strum = { version = "0.24", features = ["derive"] }
derive_more = "0.99"
serde_json = "1.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

tracing-wasm = "0.2"
tracing = "0.1"
console_error_panic_hook = "0.1"

