[package]
name = "manage"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../../api", features = ["session"] }
shared = { path = "../shared" }
honey = { git = "https://github.com/tdooms/honey.git" }

cobul = { git = "https://github.com/tdooms/cobul.git", features = ["fa"] }
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c" }

gloo-timers = "0.2.4"
strum = { version = "0.24" }
validator = { version = "0.16", features = ["derive"] }
log = "0.4"