[package]
name = "manage"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../../api", features = ["sessions"] }
shared = { path = "../shared" }

cobul = { git = "https://github.com/tdooms/cobul.git", features = ["fa"] }
yew-router = "0.17"
yew = "0.20"

gloo = "0.8"
strum = "0.24"
validator = { version = "0.16", features = ["derive"] }
log = "0.4"